Sun Sep 5 2010 Valient Gough <vgough@pobox.com>
	* fix mount failures when using certain options, due to changes in
	  option passing mechanism in 1.7
	* allow per-block random bytes to be configured independently of
	  per-block MAC.
	* bundle as version 1.7.2

Sun Aug 29 2010 Valient Gough <vgough@pobox.com>
	* new IV initialization
	* tag version 1.7

Sat Aug 28 2010 Valient Gough <vgough@pobox.com>
	* fix component configuration to ease adding flags or config

Thu Jun 17 2010 Valient Gough <vgough@pobox.com>
	* bump version to 1.6

Mon Jun 14 2010 Valient Gough <vgough@pobox.com>
        * fix compile error for boost < 1.41 and change rWarning to rInfo
        * fix compiler warnings about unused result from fgets
        * add boost 1.42+ support
        * incorporate patch from Arch linux, bump version
        * add support for version field within serialized config

Sat Nov 28 2009 Valient Gough <vgough@pobox.com>
        * more tests
        * add more tests and makefile target, test standard and paranoia mode
        * fix tests on Linux
        * add softlink tests

Fri Nov 27 2009 Valient Gough <vgough@pobox.com>
        * add beginning of automated test script
        * add options to help automate filesystem creation
        * fix install instructions, issue 47

Thu Nov 26 2009 Valient Gough <vgough@pobox.com>
	* add extpass option and multi-argument support to encode and decode
	  commands.  Based on patch by Nikratio.  Closes issue 33.
	* don't enable valgrind support unless explicitly requested.
	  Fix for issue 35.
	* fix INSTALL instructions.  issue 47
	* add --standard and --paranoia options to automate creation

Sun Nov 22 2009 Valient Gough <vgough@pobox.com>
	* use lutimes instead of utimes, so that symlinks can have time modified
	* try to maintain modtime during rename, patch by p.kosseff
	* set proper build paths for rlog and boost. patch from ejb (issue 51
	  in tracker) fix compiler error from gcc 4.4